# scope-sdk

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md
.github/workflows/: scope-python-sdk-ci.yml  scope-python-sdk-release.yml  scope-ruby-sdk-ci.yml  scope-ruby-sdk-release.yml
sdks/python/: CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
sdks/python/examples/: basic_usage.py  error_handling.py
sdks/python/src/scope_client/: __init__.py  _telemetry.py  _version.py  cache.py  client.py  configuration.py  connection.py  credentials.py  errors.py  renderer.py  token_manager.py
sdks/python/src/scope_client/resources/: __init__.py  base.py  prompt.py  prompt_version.py
sdks/python/tests/: __init__.py  conftest.py  test_cache.py  test_client.py  test_configuration.py  test_credentials.py  test_errors.py  test_renderer.py  test_token_manager.py
sdks/python/tests/resources/: test_prompt_version.py
sdks/ruby/: .rubocop.yml  .yardopts  CHANGELOG.md  CLAUDE.md  Gemfile  Makefile  README.md  Rakefile  scope-client.gemspec
sdks/ruby/examples/: basic_usage.rb  error_handling.rb
sdks/ruby/lib/: scope_client.rb
sdks/ruby/lib/scope_client/: cache.rb  client.rb  configuration.rb  connection.rb  credentials.rb  errors.rb  renderer.rb  token_manager.rb  version.rb
sdks/ruby/lib/scope_client/middleware/: authentication.rb  telemetry.rb
sdks/ruby/lib/scope_client/resources/: base.rb  prompt.rb  prompt_version.rb
sdks/ruby/spec/: scope_client_spec.rb  spec_helper.rb
sdks/ruby/spec/scope_client/: cache_spec.rb  client_spec.rb  configuration_spec.rb  credentials_spec.rb  errors_spec.rb  renderer_spec.rb  token_manager_spec.rb
sdks/ruby/spec/scope_client/resources/: prompt_version_spec.rb
sdks/ruby/spec/support/: helpers.rb
